--- a/css/style.css
+++ b/css/style.css
@@ -372,20 +372,15 @@ div:nth-child(1) {
 }
 
 .galery__add {
-  height: 200px;
-  width: 1200px;
   background: #f8f8f8;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 200px;
-  width: 575px;
-  height: 39px;
+  height: 200px;
   font-family: Roboto Condensed;
   font-style: italic;
+  font-weight: normal;
   font-size: 36px;
   line-height: 40px;
+  display: flex;
+  align-items: flex-end;
   letter-spacing: 0.6px;
   color: #242121;
 }
@@ -399,7 +394,5 @@ div:nth-child(1) {
   font-size: 14px;
   line-height: 18px;
   display: flex;
-  align-items: flex-end;
-  letter-spacing: 0.6px;
-  color: #242121;
+  flex-direction: column;
 }
