--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ div:nth-child(1) {
 }
 
 .galery {
-  min-height: 100vh;
+  /*   min-height: 100vh; */
   /*  padding: 0 0 200px; */
   padding: 220px 0px 200px;
 }
@@ -298,7 +298,6 @@ div:nth-child(1) {
 .galery__filter-btn {
   display: flex;
   justify-content: left;
-  margin-top: 210px;
 }
 
 .galery__btn {
@@ -311,6 +310,7 @@ div:nth-child(1) {
   letter-spacing: 0.6px;
   color: #242121;
   margin-left: 20px;
+  margin-bottom: 200px;
 }
 
 .galery__btn:hover {
@@ -321,6 +321,7 @@ div:nth-child(1) {
   display: flex;
   flex-direction: row;
   gap: 40px;
+  margin-bottom: 50px;
 }
 
 .galery__content-inner {
@@ -355,7 +356,6 @@ div:nth-child(1) {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  margin-bottom: 200px;
 }
 
 .galery__more {
@@ -376,29 +376,21 @@ div:nth-child(1) {
 
 .galery__add {
   background: #f8f8f8;
-  height: 200px;
-  /* font-family: Roboto Condensed;
-  font-style: italic;
-  font-weight: normal;
-  font-size: 36px;
-  line-height: 40px; */
+  min-height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /*   letter-spacing: 0.6px;
-  color: #242121; */
 }
 
 .galery-author__content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 36px;
 }
 
 .author-quote {
+  display: flex;
+  position: absolute;
   font-family: Roboto Condensed;
   font-style: italic;
   font-weight: normal;
@@ -406,9 +398,11 @@ div:nth-child(1) {
   line-height: 40px;
   letter-spacing: 0.6px;
   color: #242121;
+  right: 165px;
 }
 
 .galery__author {
+  position: relative;
   width: 273px;
   height: 18px;
   font-family: Roboto Condensed;
@@ -416,10 +410,59 @@ div:nth-child(1) {
   font-weight: 300;
   font-size: 14px;
   line-height: 18px;
-  display: block;
-  right: 165px;
 }
 
 .galery__video {
   padding: 200px 0 200px;
+}
+
+.galery__numbers {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.galery__numbers-item {
+  min-width: 132px;
+  font-family: Roboto Condensed;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 75px;
+  /* identical to box height */
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  letter-spacing: 0.6px;
+  color: #01353e;
+  margin-right: 100px;
+}
+
+.galery__numbers-item span {
+  font-family: Roboto Condensed;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 18px;
+  /* identical to box height, or 129% */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  letter-spacing: 0.6px;
+}
+
+.Blog {
+  padding: 220px 0px 200px;
+  min-height: 100vh;
+}
+
+.our__team-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.our__team-item {
+  margin-right: 105px;
 }
